--- a/system-design/src/main/res/values/dimens.xml
+++ b/system-design/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="content_padding">18dp</dimen>
+    <dimen name="content_padding_2">18dp</dimen>
+    <dimen name="content_padding_1">8dp</dimen>
+    <dimen name="toolbar_text_size">20dp</dimen>
 </resources>
